--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,8 +18,9 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Finch Collector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/finches">View All My Finches</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'finches_create' %}">Create a Finch</a></li>
+          <li><a href="{% url 'index' %}">View All My Finches</a></li>
         </ul>
       </div>
     </nav>
