--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -3,21 +3,63 @@
 
 <h1>Finch Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ finch.name }}</span>
-    <p>Species: {{ finch.species }}</p>
-    <p>Description: {{ finch.description|linebreaks }}</p>
-    {% if finch.age > 0 %}
-      <p>Age: {{ finch.age }}</p>
-    {% else %}
-      <p>Age: Chick</p>
-    {% endif %}
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ finch.name }}</span>
+        <p>Species: {{ finch.species }}</p>
+        <p>Description: {{ finch.description|linebreaks }}</p>
+        {% if finch.age > 0 %}
+          <p>Age: {{ finch.age }}</p>
+        {% else %}
+          <p>Age: Chick</p>
+        {% endif %}
+      </div>
+      <div class="card-action">
+        <a href="{% url 'finches_update' finch.id %}">Edit</a>
+        <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+      </div>
+    </div>
   </div>
-  <div class="card-action">
-    <a href="{% url 'finches_update' finch.id %}">Edit</a>
-    <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+  <div class="col s6">
+    <form action="{% url 'add_feeding' finch.id %}" method="POST">
+      {% csrf_token %}
+      {{ feeding_form.as_p }}
+      <input type="submit" class="btn" value="Add Feeding">
+    </form>
+    {% if finch.fed_for_today %}
+      <div class="card-panel teal-text center-align">{{finch.name}} has been fed all meals for today</div>
+    {% else %}
+      <div class="card-panel red-text center-align">{{finch.name}} might be hungry</div>
+    {% endif %}
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Meal</th></tr>
+      </thead>
+      <tbody>
+        {% for feeding in finch.feeding_set.all %}
+          <tr>
+            <td>{{feeding.date}}</td>
+            <td>{{feeding.get_meal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
 
+<script>
+  const dateEl = document.getElementById('id_date');
+  // M is Materialize's global variable
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+
+  const selectEl = document.getElementById('id_meal');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
