--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -48,7 +48,56 @@
     </table>
   </div>
 </div>
-
+  <!-- New Markup Above -->
+</div>
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ finch.name }}'s Toys</h3>
+    {% if finch.toys.count %}
+      {% for toy in finch.toys.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+            </span>
+            <div class="card-action">
+              <form action="{% url 'unassoc_toy' finch.id toy.id %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" class="btn">Remove</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Toys 😿</h5>
+    {% endif %}
+  </div>
+  <!-- Available toys will come after this line -->
+  <div class="col s6">
+    <h3>Available Toys</h3>
+    {% if toys.count %}
+      {% for toy in toys.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_toy' finch.id toy.id %}" method="POST">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{finch.name}} Already Has All Toys Available</h5>
+    {% endif %}
+  </div>
+</div>
 <script>
   const dateEl = document.getElementById('id_date');
   // M is Materialize's global variable
